# Pseudocode_compiler

./: .gitignore  CMakeLists.txt  custom_exceptions.hpp  dataTypes.txt  handling_functions.hpp  input.psc  input.pscd  internal.hpp  internal_functions.hpp  keywords.txt  main.cpp  readme.md
include/: AST.hpp  lexer.hpp  parser.hpp  string_utils.hpp
old/: handling_functions.hpp  input.pscd  internal_functions.hpp  keywords.txt  main.cpp
resources/: input.pscd  keywords.txt  parser_test.pscd
src/: AST.cpp  lexer.cpp  main.cpp  parser.cpp  string_utils.cpp
